--- a/shariff-tester/Dependencies.toml
+++ b/shariff-tester/Dependencies.toml
@@ -9,28 +9,8 @@ distribution-version = "2201.7.2"
 
 [[package]]
 org = "ballerina"
-name = "io"
-version = "1.5.0"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "lang.value"}
-]
-modules = [
-	{org = "ballerina", packageName = "io", moduleName = "io"}
-]
-
-[[package]]
-org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
-
-[[package]]
-org = "ballerina"
-name = "lang.value"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
-]
 
 [[package]]
 org = "ballerina"
@@ -57,19 +37,9 @@ org = "tharana_wanigaratne"
 name = "shariff_tester"
 version = "0.1.0"
 dependencies = [
-	{org = "ballerina", name = "io"},
-	{org = "ballerinai", name = "observe"},
-	{org = "tharana_wanigaratne", name = "tool_shariff"}
+	{org = "ballerinai", name = "observe"}
 ]
 modules = [
 	{org = "tharana_wanigaratne", packageName = "shariff_tester", moduleName = "shariff_tester"}
-]
-
-[[package]]
-org = "tharana_wanigaratne"
-name = "tool_shariff"
-version = "0.1.0"
-modules = [
-	{org = "tharana_wanigaratne", packageName = "tool_shariff", moduleName = "tool_shariff"}
 ]
 
