--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'application'
     // For using the ballerina java project API
 //    id 'java-library'
+    // For SonarCloud static code analysis integration
+    id "org.sonarqube" version "4.3.1.3277"
 }
 
 group 'shariff.cli'
@@ -26,16 +28,32 @@ dependencies {
     implementation group:'org.ballerinalang', name:'ballerina-cli', version:'2201.5.2-20230825-182600-2be0f24b'
     implementation group:'info.picocli', name:'picocli', version:'4.7.5'
 
-    // Required dependencies for accessing the ballerina java project API
-//    implementation group:'org.ballerinalang', name:'ballerina-lang', version:'2201.5.2'
-//    implementation group:'org.ballerinalang', name:'ballerina-tools-api', version:'2201.5.2'
-//    implementation group:'org.ballerinalang', name:'ballerina-parser', version:'2201.5.2'
-
-    // Additional dependencies for testing
+    // Required dependency for transforming JSON file to Java Objects
     implementation group:'com.fasterxml.jackson.core', name:'jackson-databind', version:'2.13.3'
+
+    // ====================
+    // Testing Dependencies (Related to Getting the Ballerina source file Syntax Tree)
+    // ====================
+    // Required dependencies for accessing the ballerina java project API
+    implementation group:'org.ballerinalang', name:'ballerina-lang', version:'2201.5.2'
+    implementation group:'org.ballerinalang', name:'ballerina-tools-api', version:'2201.5.2'
+    implementation group:'org.ballerinalang', name:'ballerina-parser', version:'2201.5.2'
+
+    // Other dependencies
 }
 
 // class to build when gradlew run is executed in there terminal
 application {
     mainClass = 'balToolTester.Main'
+}
+
+// SonarCloud required Properties
+sonar {
+    properties {
+        property "sonar.projectKey", "sonardance_cli-shariff-project"
+        property "sonar.organization", "sonardance"
+        property "sonar.host.url", "https://sonarcloud.io"
+        // for some reason we have to give the absolute path for sonarqube to get the generic report data (Might have to use the sonarscanner CLI)
+        property "sonar.externalIssuesReportPaths","C:\\Users\\Tharana Wanigaratne\\Desktop\\BalWorkFile\\ShariffCommand\\shariff-tester\\ballerina-sonar-generic-report.json"
+    }
 }
