--- a/tool-shariff/Dependencies.toml
+++ b/tool-shariff/Dependencies.toml
@@ -8,10 +8,10 @@ dependencies-toml-version = "2"
 distribution-version = "2201.7.2"
 
 [[package]]
-org = "tharana_wanigaratne"
+org = "tharanascommands"
 name = "tool_shariff"
 version = "0.1.0"
 modules = [
-	{org = "tharana_wanigaratne", packageName = "tool_shariff", moduleName = "tool_shariff"}
+	{org = "tharanascommands", packageName = "tool_shariff", moduleName = "tool_shariff"}
 ]
 
